<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="hi_john">Hi, John!</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="john_tim">John Tim</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="categories">Categories</string>
    <string name="your_orders">Your Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="services">Services</string>
    <string name="particulars">Particulars</string>
    <string name="purchase">Purchase</string>
    <string name="items_in_cart">Items in cart</string>
</resources>