<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="800dp"
        android:layout_height="700dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="-150dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-250dp"
        android:background="@drawable/circle_shape_nav" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/avatar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@id/profile_image"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/john_tim"
        android:textColor="@color/dark_grey"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/profile_image"
        android:fontFamily="@font/roboto"
        android:text="@string/edit_profile"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="225dp"
        android:layout_height="2dp"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="45dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontal_line"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/your_orders"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_bold"

            android:text="@string/wishlist"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/faqs"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>