<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_green"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="350dp"
            android:layout_alignParentEnd="true"
            android:layout_height="350dp"
            android:layout_marginTop="-120dp"
            android:layout_marginEnd="-120dp"
            android:background="@drawable/circle_item_desc" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_back" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="130dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Lemon Tea"
                android:textColor="@color/dark_grey"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/item_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="Good day time"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_note"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="$"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/currency"
                android:layout_marginTop="-30dp"
                android:layout_toEndOf="@id/currency"
                android:fontFamily="@font/roboto_bold"
                android:text="12.99"
                android:textSize="50sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:layout_marginTop="40dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="60dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="30dp">

                        <TextView
                            android:id="@+id/heading1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/particulars"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/roboto"
                            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and "
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/star" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/star" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/star" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/star" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/star" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">


                            <androidx.cardview.widget.CardView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_marginEnd="10dp"
                                android:backgroundTint="@color/light_green"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentBottom="true"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginBottom="5dp"
                                        android:fontFamily="@font/roboto_bold"
                                        android:text="500ml"
                                        android:textSize="15sp" />
                                </RelativeLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_marginEnd="10dp"
                                android:backgroundTint="@color/light_green"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentBottom="true"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginBottom="5dp"
                                        android:fontFamily="@font/roboto_bold"
                                        android:text="Less Ice"
                                        android:textSize="15sp" />
                                </RelativeLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_marginEnd="10dp"
                                android:backgroundTint="@color/light_green"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentBottom="true"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginBottom="5dp"
                                        android:fontFamily="@font/roboto_bold"
                                        android:text="Sugar"
                                        android:textSize="15sp" />
                                </RelativeLayout>
                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/services"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto"
                            android:text="Lorem Ipsum is simply dummy text of the "
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight=".15"
                                android:src="@drawable/ic_restore" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="10dp"
                                android:layout_weight=".15"
                                android:src="@drawable/ic_heart" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/addQuestion"
                                android:layout_width="0dp"
                                android:layout_height="52dp"
                                android:layout_marginStart="15dp"
                                android:layout_weight=".7"
                                android:background="@drawable/round_corner"
                                android:backgroundTint="@color/dark_green"
                                android:fontFamily="@font/roboto_bold"
                                android:text="@string/purchase"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                app:elevation="10dp" />

                        </LinearLayout>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <ImageView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_below="@id/price"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-60dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/lemon_tea_tp" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>